# PBR_OpenGL_Template

./: .gitignore  CMakeLists.txt  README.md  clean  clean_build  compile  conanfile.py  conanfile.txt  imgui.ini  log_run.sh  main.cpp  opengl_template  run  run.sh
assets/models/cave/: cave.mtl
assets/models/icosphere/: icosphere.mtl
assets/models/teapot/: teapot20segUT.mtl
assets/models/test_cube/: cube.blend  cube.mtl
assets/shaders/basic/: shader.frag  shader.vert
assets/shaders/basic/camera/: shader.vert
assets/shaders/pbr_test/: pbr_t.frag  pbr_t.geom  pbr_t.vert
assets/shaders/skybox/: shader.frag
assets/shaders/textures/: shaderStart.vert
headers/common/: general_concepts.h  paths.h
scripts/: build.sh  clean.sh  clean_build.sh  conan_build.sh  conan_install.sh
shaders/basic/: shader.frag  shader.vert
shaders/basic/camera/: shader.vert
shaders/basic/color/: texture.frag
shaders/basic/uniform/: shader.frag
shaders/lab4/: shaderStart.frag  shaderStart.vert
shaders/pbr_test/: pbr.frag  pbr_t.frag  pbr_t.geom  pbr_t.vert
shaders/skybox/: shader.vert
shaders/texture_test/: basic.frag  basic.vert
shaders/textures/: shaderStart.frag
src/common/: logger.cpp  logger.h
src/common/file/: file_utils.cpp  file_utils.h
src/common/logger/: logger.cpp  logger.h
src/rendering/camera/: camera.cpp  camera.h  main_camera.cpp  main_camera.h
src/rendering/global/: global_settings.cpp  global_settings.h
src/rendering/lights/: light.cpp  light.h  lightstrip.cpp  lightstrip.h  pointlight.cpp  pointlight.h  spotlight.cpp  spotlight.h
src/rendering/mesh/: mesh.cpp  mesh.h
src/rendering/model/: model.cpp  model.h  object.cpp  object.h
src/rendering/shaders/: shader.cpp  shader.h  uniform.cpp  uniform.h  uniform_object.cpp  uniform_object.h
src/rendering/skybox/: skybox.cpp  skybox.h
src/scheduling/: scheduling.cpp  scheduling.h
src/shaders/: shader.cpp  shader.h  uniform.cpp  uniform.h
src/widgets/: global_context_widget.cpp  global_context_widget.h  widget.cpp  widget.h  widget_utils.h
src/window/: window.cpp  window.h
textures/: Farmhouse.mtl
